--- a/src/scss/shared.scss
+++ b/src/scss/shared.scss
@@ -13,6 +13,8 @@ $body-background: hsl(0, 0%, 98%) !default;
 $weight-hairline: 100 !default;
 $weight-lighter: 200 !default;
 
+$grey-lightest: hsl(0, 0%, 91%) !default;
+
 $text-xs: .75rem;
 $text-sm: .875rem;
 $text-base: 1rem;
